--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
             <button class="numero">.</button>
             <button id="igual-btn">=</button>
             
+
+            teste
         </div>
 
     </div>
