andamento do projeto, adicionadas algumas funçoes JS

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div id="calc">
         <h3>Calculadora</h3>
         <div id="operations">
-            <div id="previous-">123</div>
+            <div id="previous-operation"></div>
             
-            <div id="current-operation">987</div>
+            <div id="current-operation"></div>
         </div>
 
         <div id="buttons-container">
@@ -39,7 +39,6 @@
             <button id="igual-btn">=</button>
             
 
-            teste
         </div>
 
     </div>
